tried another way to fix the white spaces around the images

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+html,
 body {
   font-family: monospace;
+  background: #111;
   margin: 0;
   padding: 0;
-  background: #111;
-  box-sizing: border-box;
   overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h1 {
